--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h2 class="top-title">"In the near future, I hope to become a Developer."</h2>
                 <p class="top-des"> I am eager to contribute to dynamic projects, continuously learn new programming languages and tools, and collaborate with talented professionals to build impactful software that improves lives.</p>
 
-                <a href=""><button class="btn-p">Contact with me</button></a>
+                <a href=""><button class="btn-p" onclick="openContactForm()">Contact with me</button></a>
             </div>
 
             </div>
@@ -163,10 +163,12 @@
 
 
 
-        <section class="bottom">
-            <div class="support">
+        <section >
+            <div class="bottom">
+              <div class="support">
                 <h2 style="font-size: 32px; font-weight: bold;">I need your Support</h2>
                     <p>Do not forget to add your valuable opinion</p>
+                </div>
                     <form class="support-form">
                         <input type="text" name="" id="" placeholder="Suggest any feedback for me">
                         <input type="submit" value="Submit">
@@ -182,6 +184,10 @@
 
         </section>
 
+        <div class="sec-separator">
+
+        </div>
+
 
 
 
@@ -190,7 +196,19 @@
 
 
     <footer>
+        
         <div class="foot">
+            <h3 style="font-weight: bolder;">An open Commitment by a Developer</h3>
+
+            <a href="https://www.facebook.com/" onclick="openContactForm()">
+                <img src="assets/facebook.png" alt="Facebook">
+            </a>
+            <a href="https://github.com/" onclick="openContactForm()">
+                <img src="assets/github.png" alt="Github">
+            </a>
+            <a href="https://bd.linkedin.com/" onclick="openContactForm()">
+                <img src="assets/linkedin-icon 1.png" alt="linkedin-icon">
+            </a>
 
 
 
