--- a/index.html
+++ b/index.html
@@ -118,19 +118,19 @@
                     <img src="assets/html.png" alt="">
                     <h4 class="txt" style="color: black; font-weight: 800;">HTML</h4>
                     <p class="top-des">HTML is hyper text markup language</p>
-                    <a class="link" href="https://en.wikipedia.org/wiki/HTML">Learn More</a>
+                    <a class="btn-ln" href="https://en.wikipedia.org/wiki/HTML">Learn More</a>
                 </div>
                 <div class="plan-2">
                     <img src="assets/css.png" alt="">
                     <h4 class="txt" style="color: black; font-weight: 800;">CSS</h4>
-                    <p>CSS is Cascading style sheet</p>
-                    <a href="https://en.wikipedia.org/wiki/CSS">Learn More</a>
+                    <p class="top-des">CSS is Cascading style sheet</p>
+                    <a class="btn-ln" href="https://en.wikipedia.org/wiki/CSS">Learn More</a>
                 </div>
                 <div class="plan-3">
                     <img src="assets/js.png" alt="">
                     <h4 class="txt" style="color: black; font-weight: 800;">javaScript</h4>
-                    <p> JS, is a programming language</p>
-                    <a href="https://en.wikipedia.org/wiki/JavaScript">Learn More</a>
+                    <p class="top-des"> JS, is a programming language</p>
+                    <a class="btn-ln" href="https://en.wikipedia.org/wiki/JavaScript">Learn More</a>
                 </div>
             </div>
             </div>
